content/_generated-doc/3.2/config/quarkus-vertx-http-config-group-static-resources-config.adoc

:summaryTableId: quarkus-vertx-http-config-group-static-resources-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-vertx-http-config-group-static-resources-config_configuration]]link:#quarkus-vertx-http-config-group-static-resources-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-vertx-http-config-group-static-resources-config_quarkus-http-static-resources-index-page]]`link:#quarkus-vertx-http-config-group-static-resources-config_quarkus-http-static-resources-index-page[quarkus.http.static-resources.index-page]`


[.description]
--
Set the index page when serving static resources.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_STATIC_RESOURCES_INDEX_PAGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_STATIC_RESOURCES_INDEX_PAGE+++`
endif::add-copy-button-to-env-var[]
--|string 
|`index.html`


a| [[quarkus-vertx-http-config-group-static-resources-config_quarkus-http-static-resources-include-hidden]]`link:#quarkus-vertx-http-config-group-static-resources-config_quarkus-http-static-resources-include-hidden[quarkus.http.static-resources.include-hidden]`


[.description]
--
Set whether hidden files should be served.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_STATIC_RESOURCES_INCLUDE_HIDDEN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_STATIC_RESOURCES_INCLUDE_HIDDEN+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-vertx-http-config-group-static-resources-config_quarkus-http-static-resources-enable-range-support]]`link:#quarkus-vertx-http-config-group-static-resources-config_quarkus-http-static-resources-enable-range-support[quarkus.http.static-resources.enable-range-support]`


[.description]
--
Set whether range requests (resumable downloads; media streaming) should be enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_STATIC_RESOURCES_ENABLE_RANGE_SUPPORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_STATIC_RESOURCES_ENABLE_RANGE_SUPPORT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-vertx-http-config-group-static-resources-config_quarkus-http-static-resources-caching-enabled]]`link:#quarkus-vertx-http-config-group-static-resources-config_quarkus-http-static-resources-caching-enabled[quarkus.http.static-resources.caching-enabled]`


[.description]
--
Set whether cache handling is enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_STATIC_RESOURCES_CACHING_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_STATIC_RESOURCES_CACHING_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-vertx-http-config-group-static-resources-config_quarkus-http-static-resources-cache-entry-timeout]]`link:#quarkus-vertx-http-config-group-static-resources-config_quarkus-http-static-resources-cache-entry-timeout[quarkus.http.static-resources.cache-entry-timeout]`


[.description]
--
Set the cache entry timeout. The default is `30` seconds.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_STATIC_RESOURCES_CACHE_ENTRY_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_STATIC_RESOURCES_CACHE_ENTRY_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|`30S`


a| [[quarkus-vertx-http-config-group-static-resources-config_quarkus-http-static-resources-max-age]]`link:#quarkus-vertx-http-config-group-static-resources-config_quarkus-http-static-resources-max-age[quarkus.http.static-resources.max-age]`


[.description]
--
Set value for max age in caching headers. The default is `24` hours.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_STATIC_RESOURCES_MAX_AGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_STATIC_RESOURCES_MAX_AGE+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|`24H`


a| [[quarkus-vertx-http-config-group-static-resources-config_quarkus-http-static-resources-max-cache-size]]`link:#quarkus-vertx-http-config-group-static-resources-config_quarkus-http-static-resources-max-cache-size[quarkus.http.static-resources.max-cache-size]`


[.description]
--
Set the max cache size.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_STATIC_RESOURCES_MAX_CACHE_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_STATIC_RESOURCES_MAX_CACHE_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`10000`

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() javadoc] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
